			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: compile_predicates/1

  * ADDED: some more statistics on mutex usage

  * ENHANCED: Use mutex per dynamic predicate in the multi-threaded version.
    This reduces contention a lot on the Aleph test.


VERSION 5.1.10#2 (Mar 15, 2003)
===============================

  * FIXED: sort([X], [Y]), X == Y.  Paul Singleton.


VERSION 5.1.10 (Mar 14, 2003)
=============================

  * FIXED: Avoid thread_signal/2 to signal a just-exited thread.  More
    patches here ...

  * ADDED: New execution profiler providing much more readable and detailed
    output.

  * FIXED: thread_setconcurrency/2 detection (Steve Moyle).

  * ENHANCED: Implementation of thread_signal() and friends on Windows.
    Avoid using a window and allow exceptions to be raised in blocking
    calls.

  * ADDED: Separating Prolog engines from threads.

  * ADDED: -embed-shared option to plld

  * ADDED: Make safe signal handling possible from various blocking I/O
    operations, expanding the useability of call_with_tim_limit/2.

  * ENHANCED: Use Richard O'Keefe's natural merge-sort for sort/2, msort/2
    and keysort/2.  More space efficient.  As good as the best qsort()
    from libc and replaces old slow keysort with an efficient alternative.

  * ENHANCED: make == and \== last-argument-tail-recursive, so they apply
    to arbitrary long lists.

  * FIXED: Bug#32: A number of issues around unloading shared objects.
    Mike Elston.

  * FIXED: Avoid tracing the $aborted exception.

  * FIXED: Call stack-shifter when low on stack in built-in sort/1.
    Only applies to systems where mmap() doesn't work or isn't detected
    properly. Richard O'Keefe.  
